--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,9 @@ on:
         - debug  
 jobs:
   test:
+    env:
+      EMAIL: ${{ secrets.EMAIL }}
+      APP_PASS: ${{ secrets.APP_PASS }}
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -29,7 +32,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: EMAIL=${{secrets.EMAIL}} APP_PASS=${{secrets.APP_PASS}} npx playwright test
+      run: EMAIL=$EMAIL APP_PASS=$APP_PASS npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
