--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: EMAIL=$EMAIL APP_PASS=$APP_PASS npx playwright test
+      run: EMAIL="$EMAIL" APP_PASS="$APP_PASS" npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
