send email added

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^20.11.4",
     "csv-parse": "5.5.3",
     "imap": "^0.8.19",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "nodemailer": "^6.9.13"
   },
   "dependencies": {
     "html-to-text": "^9.0.5",
